--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
 
-            <div class="logo">
+            <div class="logo2">
                 <img src="logo2.svg" alt="">
             </div>
 
@@ -88,11 +88,11 @@
             </div>
 
 
-            <div class="logo2">
+            <div class="logo3">
                 <img src="logo2.svg" alt="">
             </div>
 
-        </div>
+        </div><br>
         <div id="listar" style="display: none;">
         </div>
     </div>
